<resources>
    <string name="app_name">Test1</string>
    <string name="welcome">Welcome</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="contact_no">Contact No</string>
    <string name="password">Password</string>
    <string name="expense">Expense</string>
    <string name="update_profile">Update Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="update">Update</string>
    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="graph">Graph</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Confirm">Confirm Add</string>
    <string name="add_category">Add Category</string>
    <string name="cash">Cash</string>
    <string name="account">Online</string>
    <string name="add_record">Add Record</string>
    <string name="select_date">Select Date</string>
    <string name="date">Date :</string>
    <string name="note">Note :</string>
    <string name="dd_mm_yyyy_or_select_date">DD/MM/YYYY or Select Date</string>
    <string name="logo">Logo</string>
    <string name="category">Category :</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="online">Online</string>
    <string name="selectAccountType">Select Account Type</string>
    <string name="view_transaction">View Transaction</string>
</resources>