<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    tools:context=".Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <!--Profile Logo-->
        <LinearLayout
            android:id="@+id/layout_profile_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            tools:ignore="MissingConstraints">
            <ImageView
                android:id="@+id/img_progile_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo"
                android:transitionName="logo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense"
                android:layout_centerHorizontal="true"

                android:textSize="40sp"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/textColor"
                android:transitionName="logo_text"
                tools:ignore="ObsoleteLayoutParam" />
        </LinearLayout>
        <!--Profile Update-->
        <LinearLayout
            android:id="@+id/layout_profile_uinfo"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <!--Welcome Row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/welcome"
                    android:textColor="@color/textColor"
                    android:textSize="30sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/profile_uname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />
            </LinearLayout>
            <!--Update profile-->
            <LinearLayout
                android:id="@+id/profile_uinfo_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/update_profile"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    />
            </LinearLayout>
            <!--Update Diaglog-->
            <!--Name-->
            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:neumorph_shapeType="pressed">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textCursorDrawable="@drawable/cursor"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:hint="@string/name"
                    android:background="@drawable/no_background"/>
            </soup.neumorphism.NeumorphCardView>
            <!--Contact No-->
            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:neumorph_shapeType="pressed">

                <EditText
                    android:id="@+id/et_contactno"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"
                    android:textCursorDrawable="@drawable/cursor"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:hint="@string/contact_no"
                    android:background="@drawable/no_background"/>
            </soup.neumorphism.NeumorphCardView>
            <!--Password-->
            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:neumorph_shapeType="pressed">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@drawable/cursor"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:hint="@string/password"
                    android:background="@drawable/no_background"/>
            </soup.neumorphism.NeumorphCardView>
            <!--Update-->
            <soup.neumorphism.NeumorphButton
                style="@style/Widget.Neumorph.Button"
                android:id="@+id/update_profile"
                android:layout_width="160dp"

                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/update"
                android:layout_gravity="center"
                android:textColor="@color/textColor"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        <!--Signout-->
        <LinearLayout
            android:id="@+id/layout_profile_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="130dp"
            tools:ignore="MissingConstraints">
            <soup.neumorphism.NeumorphButton
                style="@style/Widget.Neumorph.Button"
                android:id="@+id/signout"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/sign_out"
                android:layout_marginStart="30dp"
                android:textColor="@color/red_500"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>