<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <!--Top logo and name-->
        <LinearLayout
            android:id="@+id/layout_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            tools:ignore="MissingConstraints">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo"
                android:transitionName="logo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expense"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/img_logo"
                android:textSize="40sp"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/textColor"
                android:transitionName="logo_text"/>
        </LinearLayout>

        <!-- <ImageView
             android:id="@+id/img_bottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/layout_top"
             android:src="@drawable/background_bottom"
             tools:ignore="MissingConstraints" />-->

        <LinearLayout
            android:id="@+id/layout_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/layout_top"
            android:orientation="vertical"
            tools:ignore="ExtraText"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/register"
                android:textColor="@color/textColor"
                android:textSize="40sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/let_s_get_started"
                android:textColor="@color/textColor"
                android:textSize="20sp" />
            <!--Name-->
            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:neumorph_shapeType="pressed">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textCursorDrawable="@drawable/cursor"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:hint="@string/name"
                    android:background="@drawable/no_background"/>
            </soup.neumorphism.NeumorphCardView>
            <!--Email-->
            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:neumorph_shapeType="pressed">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@drawable/cursor"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:hint="@string/email"
                    android:background="@drawable/no_background"/>
            </soup.neumorphism.NeumorphCardView>
            <!--Contact No-->
            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:neumorph_shapeType="pressed">

                <EditText
                    android:id="@+id/et_contactno"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"
                    android:textCursorDrawable="@drawable/cursor"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:hint="@string/contact_no"
                    android:background="@drawable/no_background"/>
            </soup.neumorphism.NeumorphCardView>
            <!--Password-->
            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:neumorph_shapeType="pressed">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@drawable/cursor"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:hint="@string/password"
                    android:background="@drawable/no_background"/>
            </soup.neumorphism.NeumorphCardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp">
                <!--Signup button-->
                <soup.neumorphism.NeumorphButton
                    style="@style/Widget.Neumorph.Button"
                    android:id="@+id/signup_reg"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="Sign Up"
                    android:textColor="@color/textColor"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"/>
                <!--Signin button-->
                <soup.neumorphism.NeumorphButton
                    style="@style/Widget.Neumorph.Button"
                    android:id="@+id/signin_reg"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="Sign In"
                    android:textColor="@color/textColor"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>