<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment"
    android:background="@color/light_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <!--Profile Logo-->
        <LinearLayout
            android:id="@+id/layout_profile_top"
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/img_progile_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo"
                android:transitionName="logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-thin"

                android:text="@string/expense"
                android:textColor="@color/textColor"
                android:textSize="40sp"
                android:transitionName="logo_text"
                tools:ignore="ObsoleteLayoutParam" />
        </LinearLayout>
        <!--Profile Update-->
        <LinearLayout
            android:id="@+id/layout_profile_uinfo"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <!--Welcome Row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/welcome"
                    android:textColor="@color/textColor"
                    android:textSize="30sp"
                    android:textStyle="bold" />
                <!--<TextView
                    android:id="@+id/profile_uname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />-->
            </LinearLayout>
            <!--Update profile-->
            <!--<LinearLayout
                android:id="@+id/profile_uinfo_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/update_profile"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    />
            </LinearLayout>-->

            <!--Name-->
            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:neumorph_shapeType="pressed">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textSize="20sp"
                            android:textColor="@color/textColor"
                            android:text="Name : "
                            android:layout_marginTop="20dp"
                            android:background="@drawable/no_background"/>
                        <TextView
                            android:id="@+id/p_et_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textCursorDrawable="@drawable/cursor"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textSize="20sp"
                            android:textColor="@color/textColor"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/no_background"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textSize="20sp"
                            android:textColor="@color/textColor"
                            android:text="Contact : "
                            android:layout_marginTop="10dp"
                            android:background="@drawable/no_background"/>
                        <TextView
                            android:id="@+id/p_et_contactno"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textColor"
                            android:textCursorDrawable="@drawable/cursor"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:layout_marginTop="10dp"
                            android:textSize="20sp"
                            android:background="@drawable/no_background"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textSize="20sp"
                            android:textColor="@color/textColor"
                            android:text="Email : "
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="20dp"
                            android:background="@drawable/no_background"/>
                        <TextView
                            android:id="@+id/p_et_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textCursorDrawable="@drawable/cursor"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textSize="20sp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="20dp"
                            android:textColor="@color/textColor"
                            android:background="@drawable/no_background"/>
                    </LinearLayout>
                </LinearLayout>

            </soup.neumorphism.NeumorphCardView>


            <!--Update-->
            <!--<soup.neumorphism.NeumorphButton
                style="@style/Widget.Neumorph.Button"
                android:id="@+id/update_profile"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/update"
                android:layout_gravity="center"
                android:textColor="@color/textColor"
                android:layout_marginTop="10dp"/>-->
        </LinearLayout>
        <!--Signout-->
        <LinearLayout
            android:id="@+id/layout_profile_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="300dp"

            tools:ignore="MissingConstraints">

            <soup.neumorphism.NeumorphButton
                android:id="@+id/signout"
                style="@style/Widget.Neumorph.Button"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/sign_out"
                android:textColor="@color/red_500"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>